[tool.poetry]
name = "cine-analyst-enterprise"
version = "0.1.0"
description = "Enterprise Movie Analysis AI Agent System"
authors = ["Your Name <you@example.com>"]
packages = [{include = "cine_analyst", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
# [Common]
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
python-dotenv = "^1.2.1"
loguru = "^0.7.3"
pandas = "^2.3.3"
numpy = "^2.2.6"
click = "^8.2.1"

# [Service & RAG]
fastapi = "^0.124.4"
uvicorn = ">=0.27.0"
langchain = "^1.2.0"
langchain-community = "^0.4.1"
langgraph = "^1.0.5"
opensearch-py = "^3.1.0"
neo4j = "^6.0.3"
sentence-transformers = "^5.2.0"
openai = "^2.12.0"

# [Training]
[tool.poetry.group.train.dependencies]
# 보내주신 리스트의 최신 버전 반영
torch = "2.9.0"
torchvision = "0.24.0"
torchaudio = "2.9.0"
transformers = "4.57.3"
trl = "0.24.0"
datasets = "4.3.0"
accelerate = "1.12.0"
bitsandbytes = "0.49.0"
peft = "0.18.0"
torchao = "0.14.1"
wandb = "^0.23.1"  # 모니터링을 위해 추가

# Unsloth는 성공했던 특정 커밋으로 고정
# unsloth = {git = "https://github.com/unslothai/unsloth.git", rev = "b2143c6b61221bf7717311f640f2cdf51ecefa8b"}
# unsloth_zoo = "2025.12.4"

# [Test]
[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-mock = "^3.12.0"
httpx = "^0.28.1"
pytest-cov = "^7.0.0"

[[tool.poetry.source]]
name = "pytorch_cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.scripts]
cine-ingest = "cine_analyst.data.ingestor:run_cli"
cine-train = "cine_analyst.training.trainer:run_cli"
cine-download = "cine_analyst.data.crawler:run_cli"
cine-server = "cine_analyst.app.main:start"
cine-preprocess = "cine_analyst.data.preprocessor:run_cli"

[build-system]
# ⚠️ 중요: packaging 버전을 명시하여 setuptools 충돌 방지
requires = ["poetry-core", "setuptools>=70.0.0", "packaging>=24.2"]
build-backend = "poetry.core.masonry.api"